tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__ALeadAboutLeadTh-AAAAAAAAAAAAAAAAAAACYA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 608,
  "prerequisites": [
    597
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The next step of making batteries is to collect some lead. Look at the lead quest in the novice thaumaturgy tab for more info.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lA Lead About Lead That Leads to Lead",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    597
  ],
  "rewards": [],
  "tasks": []
}
