tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__AlloySmelter-AAAAAAAAAAAAAAAAAAAAdA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 116,
  "prerequisites": [
    70,
    88
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Upgrade your steam alloy smelter to an LV one.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lAlloy Smelter",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    70,
    88
  ],
  "rewards": [],
  "tasks": []
}
