tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__AluminiumTank-AAAAAAAAAAAAAAAAAAALow==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2979,
  "prerequisites": [
    103
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you make some Double Aluminium Plates, you can make a new 96,000L single block tank.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lAluminium Tank",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    103
  ],
  "rewards": [],
  "tasks": []
}
