tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__AnalyzingtheSoil-AAAAAAAAAAAAAAAAAAAC_w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 767,
  "prerequisites": [
    531
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Tired of looking for ores by hand? Want to find underground oil that will last a long time? A seismic prospector will tell you the ores in the surrounding chunks in a (sorta) handy book you can read, and also the underground fluids beneath you. It doesn't need to be powered.\n\nTo determine which kind of fluid there is in the chunk you need to scan the soil by right-clicking an Advanced Seismic Prospector with 2 Powderbarrels, 4 Glyceryl Trinitate cells, 8 iTNT or 16 TNT. This one doesn't explode the user too on use. Features! There are four types of oil or natural gas for the overworld. See the quest in Tips and Tricks once you've made an oil drill.\n\n1) Right-click explosives.\n2) Use a single Data Stick to extract the data by right-clicking on it after the animation has finished. Each will hold ONE result.\n3) Next you need to put the data stick in a GT scanner to have it analyzed.\n4) Place the analyzed data stick in the bottom right slot of a printer and add 3 paper in the top left slot and make sure you have at least 144L squid ink in it.\n5) Take the printed pages and combine it with a piece of leather in an assembling machine filled with at least 20 mb of refined glue.\n\n[note]TADA![/note] Now you have a book with detailed info about the chunks you scanned. Visual Prospecting adds the information to your map the moment you make the book.\n\n§2Data Sticks are not easy (or possible) to make right now, so do not lose them.§r You can put it in a crafting table to erase it when done.\n\nOre locations are given as the center of the chunk. Ores that are marginal in that chunk may not be found in the center but on an edge. Look at where ores are located and determine the center of the vein. At higher tiers, it scans more chunks for ores. If you just want to know about fluids, use the lower tier version so the book isn't as long.\n\nEach underground fluid field is 8x8 chunks. This starts at 0,0 and continues for 8 chunks east and south, containing 64 chunks. Not all fields have anything in them though. Within the field the amount can vary +/- 25 percent. The amount reported in the book is the minimum and maximum per field across all chunks in the field. The prospector reports on 3x3 fields (as in, 9 fields of 8x8 chunks) at all tiers with the center field where the seismic prospector is located. Fluid extraction rate depends on many factors, check the wiki for details. In general, anything above 300 is really good. The total amount in the chunk is complicated.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lAnalyzing the Soil",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    531
  ],
  "rewards": [],
  "tasks": []
}
