tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__ArditeandCobalt-AAAAAAAAAAAAAAAAAAAEaw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1131,
  "prerequisites": [
    97,
    479
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you have some time you can look for cobalt and ardite in the Nether.\n\nYou've heard rumors of a special wood only found in another land, a forest of Twilight, that can make tools strong enough to mine them.\n\nRemember, you need an electric blast furnace to process these materials before you can make tools with them.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lArdite and Cobalt",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    97,
    479
  ],
  "rewards": [],
  "tasks": []
}
